First complete talk

--- a/towards_reproducible_science.html
+++ b/towards_reproducible_science.html
@@ -13,7 +13,11 @@
         font-family: 'Yanone Kaffeesatz';
         font-weight: normal;
       }
-      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+      .small { font-size: 0.5em; }
+      .medium { font-size: 0.65em; }
+      .remark-code, .remark-inline-code {
+          font-family: 'Ubuntu Mono';
+          font-size: 0.8em}
     </style>
   </head>
   <body>
