Use Vollkorn and Gill Sans

--- a/towards_reproducible_science.html
+++ b/towards_reproducible_science.html
@@ -4,7 +4,8 @@
     <title>Repeatable Work Flows | Willi Rath</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
-      @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
+      @import url(https://fonts.googleapis.com/css?family=Vollkorn);
+      @import url(https://fonts.googleapis.com/css?family=Gill+Sans);
       @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
@@ -22,9 +23,9 @@
           }
       }
 
-      body { font-family: 'Droid Serif'; }
+      body { font-family: 'Gill Sans'; }
       h1, h2, h3 {
-        font-family: 'Yanone Kaffeesatz';
+        font-family: 'Vollkorn';
         font-weight: normal;
       }
       .small { font-size: 0.5em; }
