Follow FA's suggestion to lower uline

--- a/towards_reproducible_science.html
+++ b/towards_reproducible_science.html
@@ -40,6 +40,7 @@
       }
       a {
           color: #778;
+          text-underline-position: under;
       }
 
       .smaller { font-size: 0.75em; }
