--- a/towards_reproducible_science.html
+++ b/towards_reproducible_science.html
@@ -41,6 +41,7 @@
       a {
           color: #778;
           text-underline-position: under;
+          word-wrap: break-word;
       }
 
       .smaller { font-size: 0.75em; }
