--- a/towards_reproducible_science.html
+++ b/towards_reproducible_science.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Repeatable Work Flows | Willi Rath</title>
+    <title>Towards Efficient &amp; Reproducible Science | Willi Rath</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
       @import url(https://fonts.googleapis.com/css?family=Vollkorn);
