Adapt site title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Towards Efficient &amp; Reproducible Science | Willi Rath</title>
+    <title>What's holding us back on our way towards Open Science? | Willi Rath</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <style type="text/css">
       @import url(https://fonts.googleapis.com/css?family=Vollkorn);
